# worker

./: .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  Dockerfile.dev  Makefile  README.md  SETUP_CI.md  celery_app.py  config.py  database.py  models.py  pyproject.toml  requirements.txt  tasks.py  trigger_deployment.py
.github/workflows/: ci.yml  docker-build.yml
app/: celery_app.py  config.py  tasks.py
app/services/: __init__.py  build_lock.py  email_service.py  git_service.py  openstack_auth.py  openstack_service.py  packer_discovery.py  packer_executor.py  terraform_executor.py
app/utils/: __init__.py  crypto.py  logger.py
services/: executors.py  git_service.py  openstack_auth.py
tests/: __init__.py  conftest.py  test_build_lock.py  test_config.py  test_crypto.py  test_git_service.py  test_logger.py  test_openstack_auth.py  test_openstack_service.py  test_packer_discovery.py  test_packer_executor.py  test_pause_resume.py  test_tasks.py  test_tasks_branches.py  test_terraform_executor.py
