[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Celery Worker für Click-n-Deploy"
license = "Apache-2.0"
package-mode = false
authors = [
    "Dein Name <dein@email.de>"
]
keywords = ["celery", "redis", "terraform", "packer", "git", "worker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
celery = {extras = ["redis"], version = "^5.3.4"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.14.2"
gitpython = "^3.1.40"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
watchdog = "^4.0"
cryptography = "^48.0"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
# Linting & Formatting
black = "^24.0"
ruff = "^0.3"
isort = "^5.13"
mypy = "^1.8"

# Testing
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
# pytest-timeout: kills a single test after ``timeout`` seconds so
# a hung dependency call (e.g. a real git clone that escaped its
# mock, a Celery broker connection that wasn't faked) cannot
# freeze the entire run. ``timeout_method = "thread"`` is essential
# — the default ``signal`` method cannot interrupt C-extension
# calls or subprocess waits.
pytest-timeout = "^2.3"
httpx = "^0.26"
pytest-mock = "^3.12"

# Type stubs
types-pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ================================================================
# Ruff Configuration
# ================================================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function calls in argument defaults
    "B904",   # raise from (too strict for existing code)
    "UP038",  # isinstance union (Python 3.10+ syntax)
    "N818",   # exception naming (existing code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["S101"]       # use of assert

# ================================================================
# Black Configuration
# ================================================================
[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
)/
'''

# ================================================================
# isort Configuration
# ================================================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*"]

# ================================================================
# Pytest Configuration
# ================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Globaler Per-Test-Timeout: kein einzelner Test darf den
    # Gesamtlauf einfrieren. 60 s ist großzügig für Git-Clone-Mocks
    # und subprocess-Calls, aber knapp genug, dass ein echter Hänger
    # (z.B. realer Netz-Call, hängender Broker) auffällt statt CI zu
    # blockieren. Einzeltests dürfen mit
    # ``@pytest.mark.timeout(N)`` lokal hochgesetzt werden.
    "--timeout=60",
    # ``thread`` ist Pflicht: das default-``signal``-Verfahren
    # benutzt ``SIGALRM`` und kann C-Extension-Calls oder blockierte
    # subprocess-waits nicht unterbrechen.
    "--timeout-method=thread",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# ================================================================
# Coverage Configuration
# ================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ================================================================
# Mypy Configuration
# ================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
